# mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GRC_ARCHITECTURE.md  GRC_SETUP_GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  init-db.sql  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container.yml
frontend/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  HYBRID_CSS_GUIDE.md  HYBRID_CSS_SUMMARY.md  MIDDLEWARE_GUIDE.md  MIDDLEWARE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  RBAC_SYSTEM.md  REDUX_INTEGRATION.md  STORYBOOK_GUIDE.md  STORYBOOK_SUMMARY.md  TAILWIND_GUIDE.md  TAILWIND_SUMMARY.md  VALIDATION_SYSTEM.md  component-library.json  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package-simple.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.storybook/: main.ts  preview.ts
k8s/: deployment.yaml  networkpolicy.yaml  service.yaml
migrations/: README  env.py  script.py.mako
migrations/versions/: 0001_initial.py
scripts/: docker-compose.yml  k6-rag.js  ragas_eval.py
src/grc/: __init__.py  agent.py  classifier.py  ingest.py  migrations.py  models.py  routes.py  tools.py
src/mcp_client/: __init__.py  cli.py  client.py  config.py  logging_config.py  metrics.py
src/mcp_server/: app.py  cli.py  config.py  health.py  logging_config.py  metrics.py  middlewares.py  resources.py  tools.py
src/mcp_server_fastmcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rag/: __init__.py  agent.py  cli.py  db.py  ingest.py  models.py  openai_utils.py  retriever.py  routes.py  settings.py  (+1 more)
tests/: test_client_cli.py  test_client_core.py  test_health_metrics.py  test_rag_ingest_unit.py  test_rag_retriever_unit.py
(+199 files in other folders)
